--- a/package.json
+++ b/package.json
@@ -30,16 +30,23 @@
 		}
 	},
 	"scripts": {
-		"build": "tsup"
+		"build": "tsup",
+		"test": "vitest"
 	},
 	"engines": {
 		"node": ">=18.17.0"
 	},
 	"devDependencies": {
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.5.0",
+		"@testing-library/react": "^16.0.1",
 		"@types/react": "^18.3.8",
+		"jsdom": "^25.0.1",
 		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"tsup": "^8.3.0",
-		"typescript": "^5.6.2"
+		"typescript": "^5.6.2",
+		"vitest": "^2.1.1"
 	},
 	"peerDependencies": {
 		"react": "^16.8.0  || ^17 || ^18"
