--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
 	},
 	"files": [
 		"dist"
-	]
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/D33key/useLocalStorage-ts"
+	}
 }
